# taobaoauto

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: ai.py  audit.py  dashboard.py  health.py  orders.py  policy.py  risk.py  shops.py  tasks.py
backend/app/audit/: redaction.py  service.py
backend/app/automation/: __init__.py
backend/app/automation/risk/: __init__.py
backend/app/automation/tool_gateway/: __init__.py  (+2 more)
backend/app/commands/: __init__.py  bus.py  idempotent_executor.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/domain/: commands.py  events.py  orders.py
backend/app/integrations/: taobao_client.py
backend/app/models/: api_call_log.py  audit_log.py  command.py  exception_task.py  kill_switch.py  order.py  store.py
backend/app/repositories/: api_logs.py  audit.py  commands.py  exception_tasks.py  kill_switches.py  orders.py
backend/app/risk/: __init__.py  approval_policy.py  kill_switch.py  levels.py
backend/app/schemas/: ai.py  dashboard.py  orders.py  policy.py  risk.py  shops.py  tasks.py
backend/app/services/: ai_orchestrator.py  platform_api_proxy.py  policy_engine.py  tool_gateway.py
backend/app/workers/: README.md
backend/tests/unit/: test_api_logs_and_adapters.py  test_command_and_audit.py  test_dashboard_api.py  test_deepseek_reply_pipeline.py  test_order_state_machine.py  test_order_sync_handler.py  test_policy_engine.py  test_risk_api.py  test_taobao_integration.py  test_tasks_api.py
(+28 files in other folders)
